Finishing up the CLientLoginDemo

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,38 @@
-﻿@{
+﻿@model InventoryLoginDemo.Models.UserInfo
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div style="padding-top:50px;"></div>
+<div style="padding:50px;">
+    <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-4">
+            <div>
+                @using (Html.BeginForm("LoginUser", "Home", FormMethod.Post, new { role = "form" }))
+                {
+                    <div>
+                        @Html.AntiForgeryToken()
+                        <div>
+                            <label>User ID</label><br/>
+                        </div>
+                        <div>
+                            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control txtbox" })
+                        </div>
+                        <div style="padding-top:20px;"></div>
+                        <div>
+                            <label>Password</label><br/>
+                        </div>
+                        <div>
+                            @Html.PasswordFor(m => m.Password, new { @class = "form-control txtbox" })
+                        </div>
+                    </div>
+                    <div style="padding-left:35%; width:40%">
+                        <div style="padding-top:20px;">
+                            <input class="btn btn-primary btn-lg rph-login-button" type="submit" value="Login"/>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
 </div>
